demo-flask-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-flask-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-flask-app
  template:
    metadata:
      labels:
        app: demo-flask-app
    spec:
      containers:
        - name: demo-flask-app
          image: rajeshgoyalg/demo-flask-app:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
