demo-flask-app/service_aks.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-flask-app-service
spec:
  selector:
    app: demo-flask-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
